--- a/Aspert/Aspert/InitPage.xaml
+++ b/Aspert/Aspert/InitPage.xaml
@@ -2,13 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Aspert.InitPage">
-    <Grid BackgroundColor="White" 
-          ColumnDefinitions="*,*,15*" 
+    <Grid ColumnDefinitions="*,*,15*" 
           RowDefinitions="*,*,*,30,30,100">
-        <Image Grid.Column="1"
-               Grid.ColumnSpan="2"
-               Grid.Row="1" 
-               Source="nuevologo_aspert.png"/>
+        <Image Grid.Column="0"
+               Grid.ColumnSpan="3"
+               Grid.Row="0"
+               Grid.RowSpan="6"
+               Aspect="Fill"
+               Source="bg1newicon_aspert.png"/>
         <Label Grid.Column="1" 
                Grid.ColumnSpan="2"
                Grid.Row="3" 
