--- a/Aspert/Aspert/App.xaml
+++ b/Aspert/Aspert/App.xaml
@@ -3,5 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Aspert.App">
     <Application.Resources>
+        <Color x:Key="LightGray">#C0CCDA</Color>
+        <Color x:Key="Gray">#8492A6</Color>
+        <Color x:Key="Yellow">#FFC82C</Color>
+        <Color x:Key="Red">#FF2C66</Color>
+        <Color x:Key="Lime">#3FF090</Color>
+        <Color x:Key="Purple">#802D92</Color>
     </Application.Resources>
 </Application>
