--- a/Aspert/Aspert/NewsPage.xaml
+++ b/Aspert/Aspert/NewsPage.xaml
@@ -1,12 +1,72 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Aspert.NewsPage">
-    <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
-    </ContentPage.Content>
+             xmlns:vm="clr-namespace:Aspert.ViewModels"
+             x:Class="Aspert.NewsPage"
+             x:DataType="vm:PageViewModel">
+    <Grid BackgroundColor="#c0ccda"
+        RowDefinitions="50,*,50">
+        <Grid.BindingContext>
+            <vm:PageViewModel/>
+        </Grid.BindingContext>
+        <!-- Menú -->
+        <ImageButton Grid.Row="0"
+                     BackgroundColor="#c0ccda"
+                     Command="{Binding Back}"
+                     HorizontalOptions="Start"
+                     Padding="10"
+                     Source="menub_aspert.png"/>
+        <!-- Fondo -->
+        <Image Grid.Row="1"
+               Aspect="Fill"
+               Source="bg4_aspert.png"/>
+        <!-- Contenido -->
+        <ScrollView Grid.Row="1">
+            <Grid Padding="20" 
+                  RowDefinitions="110,50,30,Auto,50,30,Auto,50,30,Auto,50,30,Auto">
+                <Button Grid.Row="0" 
+                        WidthRequest="110"
+                        BackgroundColor="#3ff090"
+                        Text="ÚLTIMAS NOTICIAS"
+                        TextColor="White"
+                        FontSize="16"
+                        FontAttributes="Bold"
+                        HorizontalOptions="Start"/>
+                <Label Grid.Row="2" 
+                       Text="ALGO AQUI"
+                       TextColor="#3ff090"
+                       FontAttributes="Bold"
+                       FontSize="Title"/>
+                <Label Grid.Row="3" 
+                       Text=" text here "
+                       TextColor="#8492A6"/>
+                <Label Grid.Row="5" 
+                       Text="ALGO AQUI 2"
+                       TextColor="#3ff090"
+                       FontAttributes="Bold"
+                       FontSize="Title"/>
+                <Label Grid.Row="6" 
+                       Text="TEXT HERE "
+                       TextColor="#8492A6"/>
+                <Label Grid.Row="8" 
+                       Text="ALGO AQUI 3"
+                       TextColor="#3ff090"
+                       FontAttributes="Bold"
+                       FontSize="Title"/>
+                <Label Grid.Row="9" 
+                       Text="TEXT HERE "
+                       TextColor="#8492A6"/>
+
+            </Grid>
+        </ScrollView>
+        <!-- Configuración -->
+        <ImageButton Grid.Row="2"             
+                     BackgroundColor="#c0ccda"
+                     Command="{Binding Configuration}"
+                     HorizontalOptions="End"
+                     Margin="5,5,5,5"
+                     Source="user_aspert.png"/>
+
+
+    </Grid>
 </ContentPage>
