--- a/Aspert/Aspert/ConfigurationPage.xaml
+++ b/Aspert/Aspert/ConfigurationPage.xaml
@@ -5,122 +5,126 @@
              xmlns:db="clr-namespace:Aspert.Database"
              x:Class="Aspert.ConfigurationPage"
              x:DataType="vm:ConfigurationPageViewModel">
-    <Grid BackgroundColor="#e9f0f0"
+    <Grid BackgroundColor="{StaticResource LightGray}"
           ColumnDefinitions="*" 
-          RowDefinitions="50,50,*,20,30,20,3*">
+          RowDefinitions="*,12*,*">
         <Grid.BindingContext>
             <vm:ConfigurationPageViewModel/>
         </Grid.BindingContext>
-        <ImageButton Grid.Row="0"
-                     BackgroundColor="#e9f0f0"
+        <ImageButton BackgroundColor="Transparent"
                      Command="{Binding Menu}"
                      HorizontalOptions="Start"
-                     Source="menug_aspert.png"/>
+                     Source="menug_aspert.png"
+                     Padding="10"/>
         <Image Grid.Row="1"
-               Grid.RowSpan="6"
-               Aspect="AspectFill"
+               Grid.RowSpan="2"
+               Aspect="Fill"
                Source="bg4_aspert.png"/>
-        <Image Grid.Row="2"
-               Source="user_aspert.png"
-               HorizontalOptions="Center"
-               VerticalOptions="Center"/>
-        <Label Grid.Row="4" 
-               HorizontalOptions="Center" 
-               Text="{Binding Source={Static db:SQLiteDB.Usuario}}" 
-               FontAttributes="Bold" 
-               FontSize="Title"
-               x:Name="lbName"/>
-        <StackLayout Grid.Row="6">
-            <Grid BackgroundColor="White" 
-                  ColumnDefinitions="30,50,*,*,30" 
-                  RowDefinitions="40,40,40,40,40,40,40">
-                <Label Grid.ColumnSpan="3"
-                       Margin="15,0"
-                       FontSize="Medium"
-                       Text="Configuración General"/>
-                <!-- Uso de Datos Móviles -->
-                <Image Grid.Column="1" 
-                       Grid.Row="1"
-                       Source="data_aspert.png"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="2"
-                       Grid.ColumnSpan="2"
-                       Grid.Row="1"
-                       Text="Uso de Datos Móviles"
-                       HorizontalOptions="StartAndExpand"
-                       VerticalOptions="Center"/>
-                <Switch x:Name="sUsoDeDatosMoviles" 
-                        Grid.Column="3"
-                        Grid.Row="1"
-                        Toggled="SwitchToggled"/>
-                <!-- Sincronización -->
-                <Image Grid.Column="1" 
-                       Grid.Row="2"
-                       Source="sync_aspert.png"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="2"
-                       Grid.ColumnSpan="2"
-                       Grid.Row="2"
-                       Text="Sincronización"
-                       HorizontalOptions="StartAndExpand"
-                       VerticalOptions="Center"/>
-                <Switch x:Name="sSincronizacion" 
-                        Grid.Column="3"
-                        Grid.Row="2"
-                        Toggled="SwitchToggled"/>
-                <!-- Notifiaciones -->
-                <Image Grid.Column="1" 
-                       Grid.Row="3"
-                       Source="notifications_aspert.png"
-                       HorizontalOptions="Start"/>
-                <Label Grid.Column="2"
-                       Grid.ColumnSpan="2"
-                       Grid.Row="3"
-                       Text="Notificaciones"
-                       HorizontalOptions="StartAndExpand"
-                       VerticalOptions="Center"/>
-                <Switch x:Name="sNotificaciones" 
-                        Grid.Column="3"
-                        Grid.Row="3"
-                        Toggled="SwitchToggled"/>
-                <!-- El resto -->
-                <ImageButton Grid.Column="1"
-                             Grid.Row="4"
-                             Source="edit_aspert.png"
-                             HorizontalOptions="Start"
-                             BackgroundColor="White"
-                             Pressed="ImageButton_Pressed"
-                             x:Name="btnEdit"/>
-                <Label Grid.Column="2"
-                       Grid.Row="4"
-                       HorizontalOptions="StartAndExpand"
-                       VerticalOptions="Center"
-                       Text="Editar nombre"/>
-                <ImageButton Grid.Column="1" 
-                             Grid.Row="5"
-                             Source="close_aspert.png"
-                             HorizontalOptions="Start"
-                             BackgroundColor="White"
-                             Pressed="ImageButton_Pressed"
-                             x:Name="btnClose"/>
-                <Label Grid.Column="2"
-                       Grid.Row="5"
-                       HorizontalOptions="StartAndExpand"
-                       VerticalOptions="Center"
-                       Text="Cerrar Sesión"/>
-                <ImageButton Grid.Column="1" 
-                             Grid.Row="6"
-                             Source="trashcan_aspert.png"
-                             HorizontalOptions="Start"
-                             BackgroundColor="White"                   
-                             Pressed="ImageButton_Pressed"
-                             x:Name="btnDelete"/>
-                <Label Grid.Column="2"
-                       Grid.Row="6"
-                       HorizontalOptions="StartAndExpand"
-                       VerticalOptions="Center"
-                       Text="Eliminar Cuenta"/>
-            </Grid>
-        </StackLayout>
+        <Grid Grid.Row="1"
+              RowDefinitions="*,1.3*,*,4*">
+            <Image Grid.Row="1"
+                   Source="user_aspert.png"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center"/>
+            <Label x:Name="lbName"
+                   Grid.Row="2" 
+                   HorizontalOptions="Center" 
+                   FontAttributes="Bold" 
+                   FontSize="32"
+                   Text="{Binding Source={Static db:SQLiteDB.Usuario}}" />
+            <StackLayout Grid.Row="3" 
+                         BackgroundColor="White">
+                <Grid ColumnDefinitions="30,50,*,*,30" 
+                      RowDefinitions="*,*,*,*,*,*,*"
+                      Margin="10">
+                    <Label Grid.ColumnSpan="3"
+                           Margin="15,0"
+                           FontSize="Medium"
+                           Text="Configuración General"/>
+                    <!-- Uso de Datos Móviles -->
+                    <Image Grid.Column="1" 
+                           Grid.Row="1"
+                           Source="data_aspert.png"
+                           HorizontalOptions="Start"/>
+                    <Label Grid.Column="2"
+                           Grid.ColumnSpan="2"
+                           Grid.Row="1"
+                           Text="Uso de Datos Móviles"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalOptions="Center"/>
+                    <Switch x:Name="sUsoDeDatosMoviles" 
+                            Grid.Column="3"
+                            Grid.Row="1"
+                            Toggled="SwitchToggled"/>
+                    <!-- Sincronización -->
+                    <Image Grid.Column="1" 
+                           Grid.Row="2"
+                           Source="sync_aspert.png"
+                           HorizontalOptions="Start"/>
+                    <Label Grid.Column="2"
+                           Grid.ColumnSpan="2"
+                           Grid.Row="2"
+                           Text="Sincronización"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalOptions="Center"/>
+                    <Switch x:Name="sSincronizacion" 
+                            Grid.Column="3"
+                            Grid.Row="2"
+                            Toggled="SwitchToggled"/>
+                    <!-- Notifiaciones -->
+                    <Image Grid.Column="1" 
+                           Grid.Row="3"
+                           Source="notifications_aspert.png"
+                           HorizontalOptions="Start"/>
+                    <Label Grid.Column="2"
+                           Grid.ColumnSpan="2"
+                           Grid.Row="3"
+                           Text="Notificaciones"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalOptions="Center"/>
+                    <Switch x:Name="sNotificaciones" 
+                            Grid.Column="3"
+                            Grid.Row="3"
+                            Toggled="SwitchToggled"/>
+                    <!-- El resto -->
+                    <ImageButton x:Name="btnEdit"
+                                 Grid.Column="1"
+                                 Grid.Row="4"
+                                 Source="edit_aspert.png"
+                                 HorizontalOptions="Start"
+                                 BackgroundColor="White"
+                                 Pressed="ImageButton_Pressed"/>
+                    <Label Grid.Column="2"
+                           Grid.Row="4"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalOptions="Center"
+                           Text="Editar nombre"/>
+                    <ImageButton x:Name="btnClose"
+                                 Grid.Column="1" 
+                                 Grid.Row="5"
+                                 Source="close_aspert.png"
+                                 HorizontalOptions="Start"
+                                 BackgroundColor="White"
+                                 Pressed="ImageButton_Pressed"/>
+                    <Label Grid.Column="2"
+                           Grid.Row="5"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalOptions="Center"
+                           Text="Cerrar Sesión"/>
+                    <ImageButton x:Name="btnDelete"
+                                 Grid.Column="1" 
+                                 Grid.Row="6"
+                                 Source="trashcan_aspert.png"
+                                 HorizontalOptions="Start"
+                                 BackgroundColor="White"                   
+                                 Pressed="ImageButton_Pressed"/>
+                    <Label Grid.Column="2"
+                           Grid.Row="6"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalOptions="Center"
+                           Text="Eliminar Cuenta"/>
+                </Grid>
+            </StackLayout>
+        </Grid>
     </Grid>
 </ContentPage>
