--- a/Aspert/Aspert/NewsPage.xaml
+++ b/Aspert/Aspert/NewsPage.xaml
@@ -11,7 +11,7 @@
         </Grid.BindingContext>
         <!-- Menú -->
         <ImageButton Grid.Row="0"
-                     BackgroundColor="#c0ccda"
+                     BackgroundColor="Transparent"
                      Command="{Binding Back}"
                      HorizontalOptions="Start"
                      Padding="10"
@@ -61,7 +61,7 @@
         </ScrollView>
         <!-- Configuración -->
         <ImageButton Grid.Row="2"             
-                     BackgroundColor="#c0ccda"
+                     BackgroundColor="Transparent"
                      Command="{Binding Configuration}"
                      HorizontalOptions="End"
                      Margin="5,0,5,5"
